# Defense-Marches

./: .env.example  .gitignore  TED-API-Integration-Guide.md  docker-compose.yml  init.sql  openapi.json  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
Test ui/: generated-page (1).html
backend-dc1/: .dockerignore  Dockerfile  nest-cli.json  nixpacks.toml  package-lock.json  package.json  railway.json  render.yaml
backend-dc1/data/: cache.db-shm  cache.db-wal
backend-dc1/src/: app.controller.ts  app.module.ts  main.ts
backend-dc1/src/common/: index.ts
backend-dc1/src/config/: cache-durations.ts  configuration.ts
backend-dc1/src/types/: dc2.types.ts  pappers.types.ts
data/: tenders.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/acheteurs/: page.tsx
src/app/carte/: page.tsx
src/app/repondre/: page.tsx
src/components/: Badge.tsx  BuyerCard.tsx  BuyerHistory.tsx  BuyerPanel.tsx  CategoryList.tsx  CompactTenderCard.tsx  Dashboard.tsx  FilterBar.tsx  Footer.tsx  Hero.tsx  InteractiveMap.tsx  MapControls.tsx  MapFilters.tsx  ModalProvider.tsx  Navbar.tsx  Section.tsx  SkeletonCard.tsx  StatsBar.tsx  TenderCard.tsx  TenderDetailModal.tsx  TenderList.tsx  TenderSpotterHome.tsx  ThemeToggle.tsx
src/context/: ThemeContext.tsx
src/lib/: boamp.ts  buyers.ts  filterLogic.ts  types.ts
ted-api-module/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
ted-api-module/src/ted_api/: __init__.py  cache.py  client.py  config.py  database.py  models.py  scheduler.py
ted-api-module/src/ted_api/api/: __init__.py  app.py  dependencies.py  routes.py
ted-api-module/tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_client.py  test_database.py  test_models.py
veille-boamp/: Dockerfile  next.config.ts  package-lock.json  package.json  part1.txt  test-place.ts  test_z_boamp.ts  tsconfig.json  verify_boamp.js
veille-boamp/backend-dc1/: .gitignore  Dockerfile  package-lock.json  package.json
veille-boamp/scripts/: audit-boamp.ts  check-place-cache.ts  fetch-tenders.ts  scrape-place-minint.ts  scrape-place.ts
veille-boamp/src/: middleware.ts
(+200 files in other folders)
